fixed spacing in radiolearn-options

--- a/frontend/src/app/shared/radiolearn-options/radiolearn-options.component.scss
+++ b/frontend/src/app/shared/radiolearn-options/radiolearn-options.component.scss
@@ -1,27 +1,22 @@
 td.box {
-  vertical-align: text-top;
   position: relative;
-  top: 1px;
-  bottom: -2px;
   overflow: hidden;
   color: black;
+  width: 3%;
+  margin-top: -2px;
+  vertical-align: top;
 }
 
 td.title {
   font-size: 95%;
-  display: block;
   position: relative;
-  width: 200px;
-  margin-left: 5px;
-  margin-right: 1px;
+  width: 47%;
+  vertical-align: top;
+  padding-top: 2px;
   word-break: break-word;
 }
 
 td.variables {
-  width: 50%;
-}
-
-td.button {
   width: 50%;
 }
 
